# voxea

./: .gitignore  Cargo.toml  README.md
crates/egui_winit/: Cargo.toml
crates/egui_winit/src/: lib.rs
crates/voxea/: Cargo.toml
crates/voxea/src/: app.rs  config.rs  main.rs  renderer.rs  window.rs
crates/voxea/src/plugin/: mod.rs
crates/voxea/src/ui/: menu.rs  mod.rs  plugview.rs  settings.rs
crates/voxea/src/vst/: host.rs  mod.rs
crates/voxea_alloc/: Cargo.toml
crates/voxea_alloc/src/: lib.rs  perf.rs
crates/voxea_audio/: Cargo.toml
crates/voxea_audio/src/: lib.rs
crates/voxea_audio/src/vst/: host.rs
crates/voxea_macro/: Cargo.toml
crates/voxea_macro/src/: lib.rs
crates/voxea_plugin/: Cargo.toml  bindings.old
crates/voxea_plugin/src/: lib.rs
crates/voxea_plugin/wit/: world.wit
crates/voxea_vst/: Cargo.toml
crates/voxea_vst/examples/: load.rs
crates/voxea_vst/src/: lib.old  lib.rs
crates/voxea_vst/src/base/: funknown.rs  mod.rs
crates/voxea_vst/src/gui/: mod.rs  plug_view.rs
crates/voxea_vst/src/vst/: audio_processor.rs  host_application.rs  mod.rs
examples/go_plugin/: README.md  build.sh  go_plugin.embed.wasm  go_plugin.wasm  main.go
examples/go_plugin/api/: plugin.c  plugin.go  plugin.h
examples/js_plugin/: build.sh  index.js  package-lock.json  package.json
examples/test_plugin/: Cargo.toml
examples/test_plugin/src/: lib.rs
examples/zero_plugin/: Cargo.toml
examples/zero_plugin/src/: lib.rs
plugins/: test_plugin.wasm  zero_plugin.wasm
