[package]
name = "voxea"
version = "0.1.0"
edition = "2021"

[dependencies]
egui_winit.workspace = true
voxea_audio.workspace = true
voxea_alloc.workspace = true
voxea_vst.workspace = true

anyhow.workspace = true
cpal.workspace = true
dirs.workspace = true
egui.workspace = true
egui-dropdown.workspace = true
egui_extras.workspace = true
egui-wgpu.workspace = true
image.workspace = true
log.workspace = true
pollster.workspace = true
rfd = "0.14.1"
ringbuf.workspace = true
rodio.workspace = true
rustc-hash.workspace = true
tracing-subscriber.workspace = true
wgpu.workspace = true
winit.workspace = true
